# wrestic

./: .env.example  Cargo.toml  README.md  flake.nix  wrestic.toml
.forgejo/workflows/: release.yml  tag.yml  test.yml
.github/workflows/: automated-build.yml  clippy.yml  release.yml  rust-linux-dev.yml  rust-linux-main.yml  rust-macos-dev.yml  rust-macos-main.yml  rust.yml  tag.yml
src/: main.rs
src/macros/: anyhow.rs  errors.rs  mod.rs
src/modules/: backup.rs  cache.rs  check.rs  custom.rs  delete.rs  forget.rs  initialize.rs  mod.rs  new_repository.rs  repair.rs  restore.rs  selector.rs  snapshots.rs  update.rs
src/utils/: completions.rs  docker.rs  get_config.rs  get_current_shell.rs  get_env.rs  get_user.rs  mod.rs  restic_checker.rs  root_checker.rs  set_environment_variables.rs  snapshots_selector.rs  tools.rs
vhs/: wrestic.tape
