[package]
name = "wrestic"
version = "1.2.0"
authors = ["alvaro17f"]
description = "Restic wrapper built in Rust"
homepage = "https://github.com/alvaro17f/wrestic"
repository = "https://github.com/alvaro17f/wrestic"
license = "LGPL-3.0"
edition = "2021"
keywords = ["restic", "wrapper", "rust"]

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.4.4", features = ["derive"] }
clap_complete = "4.4.1"
cmd_lib = "1.3.0"
color-print = "0.3.4"
config = "0.13.3"
dialoguer = "0.11.0"
flate2 = "1.0.27"
indicatif = "0.17.6"
nix = { version = "0.27.1", features = ["user"] }
regex = "1.9.3"
serde = "1.0.183"
serde_json = "1.0.104"
tar = "0.4.40"
which = "4.4.0"
