[package]
name = "wrestic"
version = "1.5.0"
authors = ["alvaro17f"]
description = "Restic wrapper built in Rust"
homepage = "https://wrestic.com/"
repository = "https://github.com/alvaro17f/wrestic"
license = "LGPL-3.0"
edition = "2021"
keywords = ["restic", "wrapper", "rust", "backup", "tool"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.7"
cmd_lib = "1.9.3"
color-print = "0.3.5"
config = "0.13.4"
dialoguer = "0.11.0"
flate2 = "1.0.28"
indicatif = "0.17.7"
lazy_static = "1.4.0"
nix = { version = "0.27.1", features = ["user"] }
regex = "1.10.2"
serde = "1.0.195"
serde_json = "1.0.111"
sudo = "0.6.0"
tar = "0.4.40"
which = "6.0.0"
