[package]
name = "wrestic"
version = "1.6.1"
authors = ["alvaro17f"]
description = "Restic wrapper built in Rust"
homepage = "https://wrestic.com/"
repository = "https://github.com/alvaro17f/wrestic"
license = "LGPL-3.0"
edition = "2021"
keywords = ["restic", "wrapper", "rust", "backup", "tool"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.1"
cmd_lib = "1.9.3"
color-print = "0.3.5"
config = "0.13.4"
dialoguer = "0.11.0"
flate2 = "1.0.28"
indicatif = "0.17.8"
lazy_static = "1.4.0"
nix = { version = "0.28.0", features = ["user"] }
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.115"
sudo = "0.6.0"
tar = "0.4.40"
which = "6.0.1"

[features]
no-self-update = []
